--- a/floatlable.jquery.css
+++ b/floatlable.jquery.css
@@ -1,9 +1,12 @@
 .fltlblHolder{
     position:relative;
+    display:inline-block;
 }
 
 .fltlbl{
+    top:0px;
     opacity:1.0;
+    visibility:visible;
     color:#4c97f8;
     font-size:9px;
     
@@ -11,29 +14,70 @@
     width:100%;
     text-align:left;
     
-    -moz-transition:margin-top .1s ease-in;
-    -o-transition:margin-top .1s ease-in;
-    -webkit-transition:margin-top .1s ease-in;
-    
-    -moz-transition:color .1s ease-in;
-    -o-transition:color .1s ease-in;
-    -webkit-transition:color .1s ease-in;
-    
-    -moz-transition:opacity .15s ease-in;
-    -o-transition:opacity .15s ease-in;
-    -webkit-transition:opacity .15s ease-in;
+    -webkit-animation-duration: 0.2s;
+    -webkit-animation-name: fadeInFromNone;
+
+}
+
+.fltlbl.fltlblHide{
+    display:none;
+    -moz-transition: top ease-out 0.15s;
+    -webkit-transition: top ease-out 0.15s;
+    -o-transition: top ease-out 0.15s;
+    transition: top ease-out 0.15s;
+
+    -webkit-animation-duration: 0.2s;
+    -webkit-animation-name: fadeOutFromIn;
     
 }
-.fltlbl.fltlblHide{
-    visibility:hidden;
-    opacity:0.0;
-    margin-top:10px;   
+
+.fltlbl:not(.fltlblHide){
+    
 }
 
 .fltlbl.active{
     color:#4c97f8;
+        -moz-transition:color .15s ease-in;
+    -o-transition:color .15s ease-in;
+    -webkit-transition:color .15s ease-in;
 }
 
 .fltlbl.inactive{
     color:#C9C9C9;
+        -moz-transition:color .15s ease-in;
+    -o-transition:color .15s ease-in;
+    -webkit-transition:color .15s ease-in;
+}
+
+@-webkit-keyframes fadeInFromNone {
+    0% {
+        display:none; 
+        opacity: 0;
+    }
+
+    1% {
+        display: block ; 
+        opacity: 0;
+    }
+
+    100% {
+        display: block ; 
+        opacity: 1;
+    }
+}
+@-webkit-keyframes fadeOutFromIn {
+    0% {
+        display:block; 
+        opacity: 1;
+    }
+
+    1% {
+        display: block ; 
+        opacity: 1;
+    }
+
+    100% {
+        display: none ; 
+        opacity: 0;
+    }
 }
