--- a/examples/examples.css
+++ b/examples/examples.css
@@ -4,16 +4,21 @@ html{
 body{
     text-align:center;
 }
-input{
+#content{
+    width:180px;
+    margin:0 auto;
+    text-align:left;
+}
+#example1{
+    margin-bottom:30px;
+}
+#example1 input{
     border: solid 1px #B5B5B5;
     outline:none;
     font-size:15px;
-    margin-top:17px;
+    margin-top:18px;
     padding:5px;
-   /* width:90%;*/
 }
-#content{
-    width:200px;
-    margin:0 auto;
-    text-align:left;
+#example2 input{
+    margin-top:10px;
 }
