Added fallback placeholder support for older browsers (mainly IE)
Fixed #2:
A fallback for placeholders is added if it is detected that the
placeholder element is not natively supported.

--- a/floatlable.jquery.css
+++ b/floatlable.jquery.css
@@ -21,3 +21,16 @@
     -webkit-transition:color .15s ease-in;
 }
 
+.placeholder{
+    position:absolute;
+    width:100%;
+    text-align:left;
+    top:0px;
+    left:0px;
+    cursor:text;
+    color:#a9a9a9;
+}
+.placeholder::selection {
+	background: rgba(0,0,0,0);
+    pointer-events:none;
+}
